--- a/form.html
+++ b/form.html
@@ -10,40 +10,95 @@
     body {
       font-family: 'Roboto', Arial, sans-serif;
       background-color: #fff;
+      color: #333;
     }
     input, textarea, select {
       border: 1px solid #ccc;
       border-radius: 0.25rem;
-      padding: 0.25rem 0.5rem;
+      padding: 0.35rem 0.5rem;
       width: 100%;
       font-size: 1rem;
+      line-height: 1.2;
+      box-sizing: border-box;
+    }
+    input[type="checkbox"] {
+      width: auto;
+      margin-right: 4px;
+      vertical-align: middle;
+    }
+    textarea {
+      resize: vertical;
+      min-height: 2.5rem;
+    }
+    .form-row {
+      margin-bottom: 0.75rem;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    .input-group {
+      display: inline-flex;
+      align-items: center;
+      margin-right: 1rem;
+    }
+    .input-group:last-child {
+      margin-right: 0;
+    }
+    .checkbox-group {
+      display: inline-flex;
+      align-items: center;
+      margin-right: 1rem;
+    }
+    .inline-input {
+      display: inline-block;
     }
     .section-title {
       font-weight: 700;
       font-size: 1.12rem;
-      margin-bottom: 0.5rem;
-      margin-top: 1.5rem;
+      margin-bottom: 0.75rem;
+      margin-top: 1.75rem;
+      padding-bottom: 0.35rem;
+      border-bottom: 1px solid #e5e7eb;
+      color: #2563eb;
     }
     .sub-title {
       font-weight: 600;
       margin-top: 1rem;
-      margin-bottom: 0.25rem;
+      margin-bottom: 0.5rem;
     }
     .field-label {
       font-weight: 500;
       margin-bottom: 0.15rem;
       display: inline-block;
+      min-width: fit-content;
     }
     .header-container {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 20px;
+      margin-bottom: 2rem;
+      padding-bottom: 1rem;
+      border-bottom: 2px solid #e5e7eb;
     }
     .logo {
-      max-height: 120px;
+      max-height: 100px;
       width: auto;
       background-color: transparent;
+    }
+    .fixed-width-xs {
+      width: 3rem !important;
+    }
+    .fixed-width-sm {
+      width: 5rem !important;
+    }
+    .fixed-width-md {
+      width: 7rem !important;
+    }
+    .fixed-width-lg {
+      width: 10rem !important;
+    }
+    .fixed-width-xl {
+      width: 15rem !important;
     }
     @media print {
       body {
@@ -54,10 +109,13 @@
         background: #fff !important;
         color: #000 !important;
       }
+      .section-title {
+        color: #000 !important;
+      }
     }
   </style>
 </head>
-<body class="mx-auto px-3 py-6 max-w-4xl">
+<body class="mx-auto px-4 py-6 max-w-4xl">
   <div class="header-container">
     <h1 class="text-2xl font-bold">Anamnese Psicanalítica</h1>
     <img src="image/logo_bg.png" alt="Logo" class="logo">
@@ -67,52 +125,66 @@
   <form>
     <!-- Dados Pessoais -->
     <div class="section-title">Dados Pessoais</div>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
-      <div>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
+      <div class="mb-2">
         <label class="field-label">Nome:</label>
         <input type="text" name="nome">
       </div>
-      <div>
-        <label class="field-label">Data nasc.:</label>
-        <input type="text" name="data_nasc" placeholder="__/__/__" style="width:7rem;display:inline-block;">
-        <label class="field-label ml-2">Idade:</label>
-        <input type="text" name="idade" style="width:3rem;display:inline-block;">
+      <div class="mb-2 form-row">
+        <div class="input-group">
+          <label class="field-label">Data nasc.:</label>
+          <input type="text" name="data_nasc" placeholder="__/__/__" class="fixed-width-md ml-1">
+        </div>
+        <div class="input-group">
+          <label class="field-label ml-3">Idade:</label>
+          <input type="text" name="idade" class="fixed-width-xs ml-1">
+        </div>
       </div>
-      <div>
-        <label class="field-label">Sexo:</label>
-        <input type="text" name="sexo" style="width:5rem;display:inline-block;">
-        <label class="field-label ml-2">Estado Civil:</label>
-        <input type="text" name="estado_civil" style="width:8rem;display:inline-block;">
+      <div class="mb-2 form-row">
+        <div class="input-group">
+          <label class="field-label">Sexo:</label>
+          <input type="text" name="sexo" class="fixed-width-sm ml-1">
+        </div>
+        <div class="input-group">
+          <label class="field-label ml-3">Estado Civil:</label>
+          <input type="text" name="estado_civil" class="fixed-width-lg ml-1">
+        </div>
       </div>
-      <div>
+      <div class="mb-2">
         <label class="field-label">Orient. Sexual:</label>
         <input type="text" name="orient_sexual">
       </div>
-      <div>
+      <div class="mb-2">
         <label class="field-label">Religião:</label>
         <input type="text" name="religiao">
       </div>
-      <div>
-        <label class="field-label">Cidade:</label>
-        <input type="text" name="cidade" style="width:8rem;display:inline-block;">
-        <label class="field-label ml-2">Estado:</label>
-        <input type="text" name="estado" style="width:3rem;display:inline-block;">
-        <label class="field-label ml-2">Tel:</label>
-        <input type="text" name="tel" style="width:8rem;display:inline-block;">
+      <div class="mb-2 form-row">
+        <div class="input-group">
+          <label class="field-label">Cidade:</label>
+          <input type="text" name="cidade" class="fixed-width-lg ml-1">
+        </div>
+        <div class="input-group">
+          <label class="field-label ml-3">Estado:</label>
+          <input type="text" name="estado" class="fixed-width-xs ml-1">
+        </div>
       </div>
-      <div>
+      <div class="mb-2">
+        <label class="field-label">Tel:</label>
+        <input type="text" name="tel">
+      </div>
+      <div class="mb-2">
         <label class="field-label">E-mail:</label>
         <input type="text" name="email">
       </div>
-      <div>
+      <div class="mb-2">
         <label class="field-label">Escolaridade:</label>
         <input type="text" name="escolaridade">
       </div>
-      <div>
+      <div class="mb-2">
         <label class="field-label">Profissão:</label>
         <input type="text" name="profissao">
       </div>
-      <div>
+      <div class="mb-2">
         <label class="field-label">Empresa:</label>
         <input type="text" name="empresa">
       </div>
@@ -121,79 +193,101 @@
 
     <!-- Família e Relacionamentos -->
     <div class="section-title">Família e Relacionamentos</div>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
-      <div>
-        <label class="field-label">Cônjuge:</label>
-        <input type="text" name="conjuge" style="width:10rem;display:inline-block;">
-        <label class="field-label ml-2">Idade:</label>
-        <input type="text" name="conjuge_idade" style="width:3rem;display:inline-block;">
-        <label class="field-label ml-2">Profissão:</label>
-        <input type="text" name="conjuge_profissao" style="width:8rem;display:inline-block;">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
+      <div class="mb-2 form-row">
+        <div class="input-group">
+          <label class="field-label">Cônjuge:</label>
+          <input type="text" name="conjuge" class="fixed-width-lg ml-1">
+        </div>
+        <div class="input-group">
+          <label class="field-label ml-3">Idade:</label>
+          <input type="text" name="conjuge_idade" class="fixed-width-xs ml-1">
+        </div>
       </div>
-      <div>
+      <div class="mb-2">
+        <label class="field-label">Profissão (cônjuge):</label>
+        <input type="text" name="conjuge_profissao">
+      </div>
+      <div class="mb-2">
         <label class="field-label">Filhos (nome, idade):</label>
         <input type="text" name="filhos">
       </div>
-      <div>
+      <div class="mb-2">
         <label class="field-label">Pai:</label>
         <input type="text" name="pai">
       </div>
-      <div>
+      <div class="mb-2">
         <label class="field-label">Mãe:</label>
         <input type="text" name="mae">
       </div>
-      <div>
-        <label class="field-label">Número de irmãos:</label>
-        <input type="text" name="num_irmaos" style="width:3rem;display:inline-block;">
-        <label class="field-label ml-2">Relação com irmãos:</label>
-        <input type="text" name="relacao_irmaos" style="width:15rem;display:inline-block;">
+      <div class="mb-2 form-row">
+        <div class="input-group">
+          <label class="field-label">Número de irmãos:</label>
+          <input type="text" name="num_irmaos" class="fixed-width-xs ml-1">
+        </div>
+        <div class="input-group">
+          <label class="field-label ml-3">Relação com irmãos:</label>
+          <input type="text" name="relacao_irmaos" class="fixed-width-xl ml-1">
+        </div>
       </div>
     </div>
     <!-- Fim Família e Relacionamentos -->
 
     <!-- Queixas e Terapia Anterior -->
     <div class="section-title">Queixas e Terapia Anterior</div>
-    <div>
+    <div class="mb-3">
       <label class="field-label">Principais queixas:</label>
       <textarea rows="2" name="principais_queixas"></textarea>
     </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-2 mt-2">
-      <div>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-3 mb-2">
+      <div class="form-row">
         <span class="field-label">Fez terapia antes?</span>
-        <label class="ml-2"><input type="checkbox" name="terapia_sim"> Sim</label>
-        <label class="ml-2"><input type="checkbox" name="terapia_nao"> Não</label>
-        <label class="ml-2">Quando?</label>
-        <input type="text" name="terapia_quando" style="width:6rem;display:inline-block;">
+        <div class="checkbox-group ml-2">
+          <input type="checkbox" id="terapia_sim" name="terapia_sim">
+          <label for="terapia_sim" class="ml-1">Sim</label>
+        </div>
+        <div class="checkbox-group ml-2">
+          <input type="checkbox" id="terapia_nao" name="terapia_nao">
+          <label for="terapia_nao" class="ml-1">Não</label>
+        </div>
+        <div class="input-group ml-3">
+          <label>Quando?</label>
+          <input type="text" name="terapia_quando" class="fixed-width-md ml-1">
+        </div>
       </div>
-      <div>
-        <label class="field-label">Por quanto tempo?</label>
-        <input type="text" name="tempo_terapia" style="width:7rem;display:inline-block; margin-right:10px;">
-        <label class="field-label ml-2">Motivo interrupção:</label>
-        <input type="text" name="motivo_interrupcao" style="width:12rem;display:inline-block;">
+      <div class="form-row">
+        <div class="input-group">
+          <label class="field-label">Por quanto tempo?</label>
+          <input type="text" name="tempo_terapia" class="fixed-width-md ml-1">
+        </div>
+        <div class="input-group">
+          <label class="field-label ml-3">Motivo interrupção:</label>
+          <input type="text" name="motivo_interrupcao" class="fixed-width-lg ml-1">
+        </div>
       </div>
     </div>
     <!-- Fim Queixas e Terapia Anterior -->
 
     <!-- Histórico Clínico -->
     <div class="section-title">Histórico Clínico</div>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
-      <div>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
+      <div class="mb-2">
         <label class="field-label">Doenças físicas:</label>
         <input type="text" name="doencas_fisicas">
       </div>
-      <div>
+      <div class="mb-2">
         <label class="field-label">Transt. psiquiátricos (pessoais):</label>
         <input type="text" name="transtorno_pessoal">
       </div>
-      <div>
+      <div class="mb-2">
         <label class="field-label">Transt. psiquiátricos (familiares):</label>
         <input type="text" name="transtorno_familiar">
       </div>
-      <div>
+      <div class="mb-2">
         <label class="field-label">Doenças importantes:</label>
         <input type="text" name="doencas_importantes">
       </div>
-      <div class="md:col-span-2">
+      <div class="md:col-span-2 mb-2">
         <label class="field-label">Medicação atual:</label>
         <input type="text" name="medicacao_atual">
       </div>
@@ -205,69 +299,106 @@
   <!-- FORMULÁRIO 2 -->
   <form class="mt-10">
     <div class="section-title">Continuação do Histórico Clínico</div>
-    <div>
+    <div class="mb-3">
       <label class="field-label">Doenças importantes:</label>
       <input type="text" name="doencas_importantes_2">
     </div>
-    <div class="mt-2">
+    <div class="mb-3">
       <label class="field-label">Medicação atual:</label>
       <input type="text" name="medicacao_atual_2">
     </div>
+    
     <!-- Hábitos e Eventos Significativos -->
     <div class="section-title">Hábitos e Eventos Significativos</div>
-    <div>
+    <div class="mb-3">
       <label class="field-label">Fatores de estresse atuais:</label>
       <input type="text" name="fatores_estresse_atuais">
     </div>
-    <div class="mt-2">
+    <div class="mb-3">
       <label class="field-label">Eventos traumáticos:</label>
       <input type="text" name="eventos_traumaticos">
     </div>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-2 mt-2">
-      <div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 mb-2">
+      <div class="mb-2 form-row">
         <label class="field-label">Uso de drogas?</label>
-        <label class="ml-2"><input type="checkbox" name="drogas_sim"> Sim</label>
-        <label class="ml-2"><input type="checkbox" name="drogas_nao"> Não</label>
-        <span class="ml-2">Quais/Freq.?</span>
-        <input type="text" name="drogas_quais_freq" style="width:7rem;display:inline-block;">
+        <div class="checkbox-group ml-2">
+          <input type="checkbox" id="drogas_sim" name="drogas_sim">
+          <label for="drogas_sim" class="ml-1">Sim</label>
+        </div>
+        <div class="checkbox-group ml-2">
+          <input type="checkbox" id="drogas_nao" name="drogas_nao">
+          <label for="drogas_nao" class="ml-1">Não</label>
+        </div>
+        <div class="input-group ml-3">
+          <label>Quais/Freq.?</label>
+          <input type="text" name="drogas_quais_freq" class="fixed-width-md ml-1">
+        </div>
       </div>
-      <div>
+      <div class="mb-2 form-row">
         <label class="field-label">Uso de álcool?</label>
-        <label class="ml-2"><input type="checkbox" name="alcool_sim"> Sim</label>
-        <label class="ml-2"><input type="checkbox" name="alcool_nao"> Não</label>
-        <span class="ml-2">Quant./Freq.?</span>
-        <input type="text" name="alcool_quant_freq" style="width:7rem;display:inline-block;">
+        <div class="checkbox-group ml-2">
+          <input type="checkbox" id="alcool_sim" name="alcool_sim">
+          <label for="alcool_sim" class="ml-1">Sim</label>
+        </div>
+        <div class="checkbox-group ml-2">
+          <input type="checkbox" id="alcool_nao" name="alcool_nao">
+          <label for="alcool_nao" class="ml-1">Não</label>
+        </div>
+        <div class="input-group ml-3">
+          <label>Quant./Freq.?</label>
+          <input type="text" name="alcool_quant_freq" class="fixed-width-md ml-1">
+        </div>
       </div>
-      <div>
+      <div class="mb-2 form-row">
         <label class="field-label">Tabagismo?</label>
-        <label class="ml-2"><input type="checkbox" name="tabagismo_sim"> Sim</label>
-        <label class="ml-2"><input type="checkbox" name="tabagismo_nao"> Não</label>
-        <span class="ml-2">Quant. diária:</span>
-        <input type="text" name="tabagismo_quant" style="width:7rem;display:inline-block;">
+        <div class="checkbox-group ml-2">
+          <input type="checkbox" id="tabagismo_sim" name="tabagismo_sim">
+          <label for="tabagismo_sim" class="ml-1">Sim</label>
+        </div>
+        <div class="checkbox-group ml-2">
+          <input type="checkbox" id="tabagismo_nao" name="tabagismo_nao">
+          <label for="tabagismo_nao" class="ml-1">Não</label>
+        </div>
+        <div class="input-group ml-3">
+          <label>Quant. diária:</label>
+          <input type="text" name="tabagismo_quant" class="fixed-width-md ml-1">
+        </div>
       </div>
-      <div>
-        <label class="field-label">Hábitos de sono:</label>
-        <input type="text" name="habitos_sono" style="width:7rem;display:inline-block;">
-        <span class="ml-2">Atividade física:</span>
-        <input type="text" name="atividade_fisica" style="width:7rem;display:inline-block;">
+      <div class="mb-2 form-row">
+        <div class="input-group">
+          <label class="field-label">Hábitos de sono:</label>
+          <input type="text" name="habitos_sono" class="fixed-width-md ml-1">
+        </div>
+        <div class="input-group">
+          <label class="field-label ml-3">Atividade física:</label>
+          <input type="text" name="atividade_fisica" class="fixed-width-md ml-1">
+        </div>
       </div>
     </div>
-    <div class="mt-2">
+    <div class="mb-3">
       <label class="field-label">Gatilhos emocionais:</label>
       <input type="text" name="gatilhos_emocionais">
     </div>
-    <div class="mt-2">
+    <div class="mb-3 form-row">
       <label class="field-label">Tentativa de suicídio?</label>
-      <label class="ml-2"><input type="checkbox" name="suicidio_sim"> Sim</label>
-      <label class="ml-2"><input type="checkbox" name="suicidio_nao"> Não</label>
-      <span class="ml-2">Quando?</span>
-      <input type="text" name="suicidio_quando" style="width:7rem;display:inline-block;">
+      <div class="checkbox-group ml-2">
+        <input type="checkbox" id="suicidio_sim" name="suicidio_sim">
+        <label for="suicidio_sim" class="ml-1">Sim</label>
+      </div>
+      <div class="checkbox-group ml-2">
+        <input type="checkbox" id="suicidio_nao" name="suicidio_nao">
+        <label for="suicidio_nao" class="ml-1">Não</label>
+      </div>
+      <div class="input-group ml-3">
+        <label>Quando?</label>
+        <input type="text" name="suicidio_quando" class="fixed-width-md ml-1">
+      </div>
     </div>
 
     <!-- Observações Gerais -->
     <div class="section-title">Observações Gerais</div>
-    <textarea rows="5" name="observacoes_gerais"></textarea>
+    <textarea rows="5" name="observacoes_gerais" class="mb-3"></textarea>
   </form>
 </body>
 </html>
